<resources>
    <string name="app_name">FavorTechDemo</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>

    <string name="mob_no">Mobile</string>
    <string name="email">Email</string>
    <string name="account"><u>Sign Up</u></string>

    <string name="enter_valid_phone_number">Please enter valid phone number</string>
</resources>
