<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="130dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="50dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/mail_left" />

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="55dp"
                android:background="@drawable/rounded_bg_edittext"
                android:hint="@string/mob_no"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="10"
                android:text="9540753913"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/color_gray" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/password_left" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginLeft="55dp"
                android:background="@drawable/rounded_bg_edittext"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:maxLength="30"
                android:text="123456"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/color_gray" />

        </RelativeLayout>

        <TextView
            android:id="@+id/createAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="end"
            android:textStyle="italic"
            android:text="@string/account"/>


        <Button
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

</RelativeLayout>