<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient">






    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="55dp"
                android:background="@drawable/rounded_bg_edittext"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:paddingStart="50dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/color_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_alignParentLeft="true"
                android:src="@drawable/mail_left" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="55dp"
                android:background="@drawable/rounded_bg_edittext"
                android:hint="@string/mob_no"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingStart="50dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/color_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/phone_left" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/passwordLayout"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="20dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="55dp"
                android:background="@drawable/rounded_bg_edittext"
                android:hint="@string/password"
                android:imeOptions="actionNext"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingStart="50dp"
                android:paddingEnd="10dp"
                android:textColorHint="@color/color_gray" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_alignParentStart="true"
                android:src="@drawable/password_left" />

        </RelativeLayout>


    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />
    <Button
        android:id="@+id/create_profile"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/button"
        android:gravity="center"
        android:onClick="onButtonClick"
        android:text="@string/sign_up"
        android:textColor="@android:color/white" />

</RelativeLayout>